// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dates identifies malformed dates 1`] = `Invalid Date`;

exports[`Dates identifies malformed dates 2`] = `
Date {
	Invalid Date
	
	foo: "bar"
}
`;

exports[`Dates identifies subclasses 1`] = `
Timestamp {
	2000-12-31T18:02:16.555Z
}
`;

exports[`Dates identifies subclasses 2`] = `
BadDate {
	Invalid Date
}
`;

exports[`Dates identifies subclasses 3`] = `
BadDate {
	Invalid Date
}
`;

exports[`Dates identifies subclasses 4`] = `
BadDate {
	Invalid Date
	
	text: "Yeah, that's bad"
}
`;

exports[`Dates prints dates 1`] = `2000-12-31T18:02:16.555Z`;

exports[`Dates prints properties 1`] = `
Date {
	2000-10-10T10:02:02.000Z
	
	foo: "bar"
	list: [
		"Alpha"
		"Beta"
		"Delta"
	]
}
`;
